--- a/thesis/notation.tex
+++ b/thesis/notation.tex
@@ -52,9 +52,9 @@
     the function is applied over all elements of the input arrays individually, whereby arrays of
     lower rank or scalars are \enquote{broadcasted} along dimensions as necessary.
   \item[{\(\Dif F(x, y) = (\Delta_1, \Delta_2) \mapsto \partial_1F(x, y)\,\Delta_1 + \partial_2F(x,
-      y)\,\Delta_2\)}] Derivatives are written using a capital \(\Dif\) for the a total derivative
-    operator, and \(\partial_i\) for the conventional partial derivatives with respect to the
-    \(i\)-th argument.
+      y)\,\Delta_2\)}] Derivatives are written using a capital \(\Dif\) for a total derivative
+    operator (like the Fréchet derivative), and \(\partial_i\) for the conventional partial
+    derivatives with respect to the \(i\)-th argument.
   \item[{\jlinlfont f(x) = rand(x)}] Julia code (including identifiers mention in the text) is
     always typeset in typewriter font.
   \item[{\irtrackerjl{}}] Julia packages are set in the same font as Julia code.  In the electronic
