--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -291,7 +291,7 @@
 }
 
 @software{churavy2019vchuravy,
-  title = {\{vchuravy/\vphantom\}{{ConcolicFuzzer}}.Jl\vphantom\{\}},
+  title = {Vchuravy/{{ConcolicFuzzer}}.Jl},
   author = {Churavy, Valentin},
   date = {2019-09-16},
   origdate = {2018-05-11T21:21:46Z},
@@ -1378,7 +1378,7 @@
 }
 
 @article{sen2005cute,
-  title = {\{\vphantom\}{{CUTE}}\vphantom\{\}: {{A}} Concolic Unit Testing Engine for \{\vphantom\}{{C}}\vphantom\{\}},
+  title = {{{CUTE}}: {{A}} Concolic Unit Testing Engine for {{C}}},
   author = {Sen, Koushik and Marinov, Darko and Agha, Gul},
   date = {2005-09},
   journaltitle = {SIGSOFT Software Engineering Notes},
@@ -1415,6 +1415,16 @@
   url = {//mc-stan.org/},
   urldate = {2020-10-19},
   langid = {english}
+}
+
+@book{tao2011introduction,
+  title = {An {{Introduction}} to {{Measure Theory}}},
+  author = {Tao, Terence},
+  date = {2011},
+  publisher = {{American Mathematical Society}},
+  langid = {english},
+  number = {126},
+  series = {Graduate {{Studies}} in {{Mathematics}}}
 }
 
 @online{tapenadedevelopers2019tapenade,
